--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {
   position: relative;
   background-color: deepskyblue;
   border: 5px solid dodgerblue;
-  width: 1000px;
+  width: 1100px;
   height: 700px;
   margin: 15px;
   overflow: hidden;
@@ -60,7 +60,7 @@ h1 {
   /* border-bottom: 2px solid; */
   height: 180px;
   background-image: linear-gradient(90deg, #639301, #a5e82e);
-  width: 80%;
+  width: 100px;
 }
 
 .borda {
@@ -74,8 +74,9 @@ h1 {
   position: absolute;
   width: 50px;
   left: calc(50% - 25px);
-  top: calc(50% - 25px);
-  top: 300px;
+  /* top: calc(50% - 25px);
+  top: 300px; */
+
 }
 
 .pontuation {
@@ -84,5 +85,10 @@ h1 {
   top: 5px;
   right: 10px;
   font-family: "Pixel";
-  font-size: 40px;
+  font-size: 50px;
+  z-index: 100;
+}
+
+.hide {
+  display: none;
 }
