--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ main {
   margin-top: 1rem;
 }
 
-.content {
+#content {
   position: relative;
   background-color: deepskyblue;
   border: 0.5rem solid dodgerblue;
   width: 90vw;
-  height: 83vh;
+  height: 80vh;
   margin: 1.5rem;
   overflow: hidden;
 }
@@ -105,6 +105,49 @@ main {
   font-family: "Pixel";
   font-size: 5rem;
   z-index: 100;
+}
+
+.hide {
+  display: none;
+}
+
+.nivel {
+  position: absolute;
+  color: white;
+  top: 6rem;
+  right: 1rem;
+  /* font-family: "Pixel"; */
+  font-size: 2rem;
+  z-index: 100;
+}
+
+.menu {
+  position: absolute;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  background-color: #639301;
+  z-index: 200;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  display: flex;
+  height: 8rem;
+  width: 18rem;
+  justify-content: center;
+  align-items: center;
+  background-color: #639301;
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 2rem;
+}
+
+.button:hover {
+  background-color: #a5e82e;
+  color: #050505;
+  cursor: pointer;
 }
 
 .hide {
